# docker-local-inference

./: .env.example  AGENTS.md  Dockerfile  Dockerfile.llamacpp  Makefile  README.md  compose.yml  pyproject.toml  test_vision.py
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 202602110001_init.sql  202602110002_seed_local_dev.sql
backend/src/: app_state.rs  config.rs  db.rs  error.rs  main.rs
backend/src/routes/: llm.rs  mod.rs  students.rs
scripts/: get-hf-model.sh  llama-entrypoint.sh  print-presets.sh
tarot_scan/: __init__.py  __main__.py  classify.py  cli.py  config.py  detect.py  manifest.py  models.py  scanner.py  ui.py  vlm_client.py
